Update the documentation for 3D

--- a/docs/source/run_examples/Detectors.ipynb
+++ b/docs/source/run_examples/Detectors.ipynb
@@ -8,6 +8,8 @@
     "# Detectors\n",
     "\n",
     "Review of all the detectors implemented in ByoTrack. For more details, have a look at the documentation or implementation of each detector.\n",
+    "\n",
+    "3D visualization of detections is not mature in ByoTrack and we advise that you save the segmentation mask to a 3D tiff and visualize them with Fiji/Icy.\n",
     "___________________________________________________\n",
     "\n",
     "1. **Wavelet Detector** (Wavelet decomposition + noise filtering)\n",
@@ -116,8 +118,12 @@
    "source": [
     "# Display the first frame\n",
     "\n",
+    "frame = video[0]\n",
+    "if  video.ndim == 5:  # (T, D, H, W, C) (3D video)\n",
+    "    frame = frame[frame.shape[0] // 2]  # Show the frame in the middle of the stack\n",
+    "\n",
     "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.imshow(video[0])\n",
+    "plt.imshow(frame)\n",
     "plt.show()"
    ]
   },
@@ -171,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the hyperparameters manually on the video\n",
+    "# Set the hyperparameters manually on the video (Only works with 2D videos)\n",
     "# Use w/x to move backward/forward in the video\n",
     "# Use c/v to update k (noise threshold)\n",
     "# Use b/n to update the scale (expected size of the spots)\n",
@@ -350,7 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the hyperparameters manually on the video\n",
+    "# Set the hyperparameters manually on the video (Only works with 2D videos)\n",
     "# Use w/x to move backward/forward in the video\n",
     "# Use c/v to update prob_threshold (The most probable spots are kept)\n",
     "# Use b/n to update the nms_threshold (Delete overlapping spots)\n",
@@ -460,7 +466,12 @@
    "source": [
     "# Display the first detections\n",
     "\n",
-    "segmentation = detections_sequence[0].segmentation.clone()\n",
+    "segmentation = detections_sequence[0].segmentation\n",
+    "\n",
+    "if detections_sequence[0].dim == 3:  # 3D\n",
+    "    segmentation = segmentation[segmentation.shape[0] // 2]  # Show the segmentation in the middle of the stack\n",
+    "\n",
+    "segmentation = segmentation.clone()\n",
     "segmentation[segmentation!=0] += 50  # Improve visibility of firsts labels\n",
     "\n",
     "plt.figure(figsize=(24, 16), dpi=100)\n",
@@ -477,6 +488,7 @@
    "source": [
     "# Display the detections with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v to switch on/off the display of the video\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
