--- a/docs/source/run_examples/Linkers.ipynb
+++ b/docs/source/run_examples/Linkers.ipynb
@@ -8,6 +8,8 @@
     "# Linkers\n",
     "\n",
     "Review of all the linkers implemented in ByoTrack. For more details, have a look at the documentation or implementation of each linker.\n",
+    "\n",
+    "3D visualization of tracks is not mature in ByoTrack and we advise that you save the relabeled segmentation mask to a 3D tiff and visualize them with Fiji/Icy.\n",
     "___________________________________________________\n",
     "\n",
     "1. **NearestNeighborLinker** (Frame by frame linker using euclidean distance association)\n",
@@ -117,8 +119,12 @@
    "source": [
     "# Display the first frame\n",
     "\n",
+    "frame = video[0]\n",
+    "if  video.ndim == 5:  # (T, D, H, W, C) (3D video)\n",
+    "    frame = frame[frame.shape[0] // 2]  # Show the frame in the middle of the stack\n",
+    "\n",
     "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.imshow(video[0])\n",
+    "plt.imshow(frame)\n",
     "plt.show()"
    ]
   },
@@ -195,6 +201,7 @@
    "source": [
     "# Display the detections with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v to switch on/off the display of the video\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -300,6 +307,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -324,7 +332,7 @@
     }
    ],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
@@ -444,6 +452,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -468,7 +477,7 @@
     }
    ],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
@@ -555,7 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Before linking, let's check visually that the optical flow algorithm works\n",
+    "# Before linking, let's check visually that the optical flow algorithm works (Only works with 2D videos)\n",
     "# We sample a grid of points that are moved by the flow computed.\n",
     "# The computed flows are good if the points roughly follows the video motion\n",
     "\n",
@@ -625,6 +634,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -649,7 +659,7 @@
     }
    ],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
@@ -821,6 +831,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -845,7 +856,7 @@
     }
    ],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
@@ -1005,6 +1016,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -1029,7 +1041,7 @@
     }
    ],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
