--- a/examples/ByoTrack fundamental.ipynb
+++ b/examples/ByoTrack fundamental.ipynb
@@ -92,8 +92,12 @@
    "source": [
     "# Display the first frame\n",
     "\n",
+    "frame = video[0]\n",
+    "if  video.ndim == 5:  # (T, D, H, W, C) (3D video)\n",
+    "    frame = frame[frame.shape[0] // 2]  # Show the frame in the middle of the stack\n",
+    "\n",
     "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.imshow(video[0])\n",
+    "plt.imshow(frame)\n",
     "plt.show()"
    ]
   },
@@ -106,6 +110,7 @@
    "source": [
     "# Display the video with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v to switch on/off the display of the video\n",
     "\n",
     "byotrack.visualize.InteractiveVisualizer(video).run()"
@@ -129,7 +134,7 @@
     "# Create the detector object with its hyper parameters\n",
     "from byotrack.implementation.detector.wavelet import WaveletDetector\n",
     "\n",
-    "detector = WaveletDetector(scale=1, k=3.0, min_area=5.0, batch_size=20, device=torch.device(\"cpu\"))"
+    "detector = WaveletDetector(scale=1, k=2.5, min_area=5, batch_size=20, device=torch.device(\"cpu\"))"
    ]
   },
   {
@@ -147,13 +152,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba50d578",
+   "id": "905ffd18",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Display the first detections\n",
     "\n",
-    "segmentation = detections_sequence[0].segmentation.clone()\n",
+    "segmentation = detections_sequence[0].segmentation\n",
+    "\n",
+    "if detections_sequence[0].dim == 3:  # 3D\n",
+    "    segmentation = segmentation[segmentation.shape[0] // 2]  # Show the segmentation in the middle of the stack\n",
+    "    \n",
+    "segmentation = segmentation.clone()\n",
     "segmentation[segmentation!=0] += 50  # Improve visibility of firsts labels\n",
     "\n",
     "plt.figure(figsize=(24, 16), dpi=100)\n",
@@ -170,6 +180,7 @@
    "source": [
     "# Display the detections with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v to switch on/off the display of the video\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -183,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set hyperparameters manually on the video\n",
+    "# Set hyperparameters manually on the video. (Only works with 2D videos)\n",
     "# Use w/x to move backward/forward in the video\n",
     "# Use c/v to update k (the main hyperparameter)\n",
     "# You can restard with another scale/min_area\n",
@@ -273,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Before linking, let's check visually that the optical flow algorithm works\n",
+    "# Before linking, let's check visually that the optical flow algorithm works (Only works with 2D videos)\n",
     "# We sample a grid of points that are moved by the flow computed.\n",
     "# The computed flows are good if the points roughly follows the video motion\n",
     "\n",
@@ -316,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
@@ -345,6 +356,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -458,7 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time  (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
@@ -541,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Project tracks onto a single image and color by track\n",
+    "# Project tracks onto a single image and color by track (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each track (if more tracks than colors, it will cycle through it)\n",
     "\n",
@@ -567,6 +579,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -606,7 +619,6 @@
     "# We also provide IO with Icy software\n",
     "\n",
     "from byotrack import icy\n",
-    "\n",
     "\n",
     "icy.save_tracks(tracks, \"tracks.xml\")  # Note that holes should should be filled first with the ForwardBackwardInterpolater\n",
     "\n",
