--- a/examples/Linkers.ipynb
+++ b/examples/Linkers.ipynb
@@ -8,6 +8,8 @@
     "# Linkers\n",
     "\n",
     "Review of all the linkers implemented in ByoTrack. For more details, have a look at the documentation or implementation of each linker.\n",
+    "\n",
+    "3D visualization of tracks is not mature in ByoTrack and we advise that you save the relabeled segmentation mask to a 3D tiff and visualize them with Fiji/Icy.\n",
     "___________________________________________________\n",
     "\n",
     "1. **NearestNeighborLinker** (Frame by frame linker using euclidean distance association)\n",
@@ -98,8 +100,12 @@
    "source": [
     "# Display the first frame\n",
     "\n",
+    "frame = video[0]\n",
+    "if  video.ndim == 5:  # (T, D, H, W, C) (3D video)\n",
+    "    frame = frame[frame.shape[0] // 2]  # Show the frame in the middle of the stack\n",
+    "\n",
     "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.imshow(video[0])\n",
+    "plt.imshow(frame)\n",
     "plt.show()"
    ]
   },
@@ -112,6 +118,7 @@
    "source": [
     "# Display the video with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v to switch on/off the display of the video\n",
     "\n",
     "byotrack.visualize.InteractiveVisualizer(video).run()"
@@ -161,6 +168,7 @@
    "source": [
     "# Display the detections with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v to switch on/off the display of the video\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -251,6 +259,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -264,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
@@ -369,6 +378,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -382,7 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
@@ -469,7 +479,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Before linking, let's check visually that the optical flow algorithm works\n",
+    "# Before linking, let's check visually that the optical flow algorithm works (Only works with 2D videos)\n",
     "# We sample a grid of points that are moved by the flow computed.\n",
     "# The computed flows are good if the points roughly follows the video motion\n",
     "\n",
@@ -524,6 +534,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -537,7 +548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
@@ -637,7 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run the linker\n",
+    "# Run the linker (3D is not supported yet)\n",
     "\n",
     "tracks = linker.run(video, detections_sequence)"
    ]
@@ -651,6 +662,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -664,7 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
@@ -774,6 +786,7 @@
    "source": [
     "# Display the tracks with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v (resp. t) to switch on/off the display of video (resp. tracks)\n",
     "# Use d to switch detection display mode (None, mask, segmentation)\n",
     "\n",
@@ -787,7 +800,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Project tracks onto a single image and color by time\n",
+    "# Project tracks onto a single image and color by time (Only works with 2D videos)\n",
     "\n",
     "# Create a list of colors for each time frame\n",
     "# From cyan (start of the video) to red (end of the video)\n",
