--- a/examples/Video.ipynb
+++ b/examples/Video.ipynb
@@ -7,13 +7,13 @@
    "source": [
     "# Video\n",
     "\n",
-    "In ByoTrack videos are expected to be Sequences of frames. Currently only 2D frames are supported but this may change in the future.\n",
+    "In ByoTrack videos are expected to be Sequences of frames. We support 2D and 3D videos.\n",
     "\n",
-    "We use numpy to represent frames: each frame is a numpy array of shape (H, W, C). The data type can be floating or integer but most of the codes of ByoTrack will expect the frames to be normalized into [0, 1] and we strongly advise to normalize videos.\n",
+    "We use numpy to represent frames: each frame is a numpy array of shape ([D, ]H, W, C). The data type can be floating or integer but most of the codes of ByoTrack will expect the frames to be normalized into [0, 1] and we strongly advise to normalize videos.\n",
     "\n",
     "ByoTrack have its own Video object (*byotrack.Video*) that enables you to read, slice and normalize videos without loading the full video in RAM. In this notebok, we explain how to read, slice, normalize and visualize such Video object in ByoTrack.\n",
     "\n",
-    "**NOTE**: In ByoTrack, the Video object can always be directly replaced by a 4D array (T, H ,W, C) or a Sequence of array [(H, W, C), ...]."
+    "**NOTE**: In ByoTrack, the Video object can always be directly replaced by a 4D/5D array (T, [D, ]H ,W, C) or a Sequence of array [([D, ]H, W, C), ...]."
    ]
   },
   {
@@ -39,7 +39,9 @@
     "\n",
     "A Video can be loaded from a single file (typically mp4 or avi). We support standard format (All those supported by OpenCV) and TIFF stacks.\n",
     "\n",
-    "Loading videos from multiple files (one file by frame) is not supported yet. The reading of such files should be done manually and then provided to ByoTrack as a Sequence of frames\n"
+    "We also support the loading of multiple files. If you give a folder as input path, ByoTrack will try to infer the list of files by itself. It supports most format of images (png, jpeg, gif, .... and also Tiff stack).\n",
+    "\n",
+    "For more complex cases, you can write your own VideoReader following those already implemented or simply load by yourself the video as numpy array."
    ]
   },
   {
@@ -53,7 +55,53 @@
     "\n",
     "video = byotrack.Video(\"path/to/video.ext\")\n",
     "\n",
-    "print(\"Video shape: T={}, H={}, W={}, C={}\".format(*video.shape, video.channels))"
+    "if video.ndim == 4:\n",
+    "    print(\"Video shape: T={}, H={}, W={}, C={}\".format(*video.shape, video.channels))\n",
+    "else:\n",
+    "    print(\"Video shape: T={}, D={}, H={}, W={}, C={}\".format(*video.shape, video.channels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5439618a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading a video from a folder:\n",
+    "# ByoTrack will find the most common extension in the folder and expect\n",
+    "# these files to be the images (sorted alphanumerically).\n",
+    "\n",
+    "video = byotrack.Video(\"path/to/images/\")\n",
+    "\n",
+    "if video.ndim == 4:\n",
+    "    print(\"Video shape: T={}, H={}, W={}, C={}\".format(*video.shape, video.channels))\n",
+    "else:\n",
+    "    print(\"Video shape: T={}, D={}, H={}, W={}, C={}\".format(*video.shape, video.channels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9448b51e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading a video from a list of files:\n",
+    "# You may also provide the full list of path yourself\n",
+    "\n",
+    "video = byotrack.Video(\n",
+    "    \"path/to/main_folder\",\n",
+    "    paths=[\n",
+    "        \"path/to/main_folder/first_frame.png\",\n",
+    "        \"path/to/main_folder/second_frame.png\",\n",
+    "    ],\n",
+    ")\n",
+    "\n",
+    "if video.ndim == 4:\n",
+    "    print(\"Video shape: T={}, H={}, W={}, C={}\".format(*video.shape, video.channels))\n",
+    "else:\n",
+    "    print(\"Video shape: T={}, D={}, H={}, W={}, C={}\".format(*video.shape, video.channels))"
    ]
   },
   {
@@ -68,7 +116,7 @@
     "\n",
     "import byotrack.example_data\n",
     "\n",
-    "video = byotrack.example_data.hydra_neurons()\n",
+    "video = byotrack.example_data.hydra_neurons()  # 2D example\n",
     "\n",
     "print(\"Video shape: T={}, H={}, W={}, C={}\".format(*video.shape, video.channels))"
    ]
@@ -95,8 +143,12 @@
     "# Display the first frame of a video.\n",
     "# This may not work for uint16 videos where normalization should be apply before visualization\n",
     "\n",
+    "frame = video[0]\n",
+    "if  video.ndim == 5:  # (T, D, H, W, C) (3D video)\n",
+    "    frame = frame[frame.shape[0] // 2]  # Show the frame in the middle of the stack\n",
+    "\n",
     "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.imshow(video[0])\n",
+    "plt.imshow(frame)\n",
     "plt.show()"
    ]
   },
@@ -229,8 +281,13 @@
    "source": [
     "# Display the first frame of this sliced video\n",
     "\n",
+    "\n",
+    "frame = v[0]\n",
+    "if  v.ndim == 5:  # (T, D, H, W, C) (3D video)\n",
+    "    frame = frame[frame.shape[0] // 2]  # Show the frame in the middle of the stack\n",
+    "\n",
     "plt.figure(figsize=(24, 16), dpi=100)\n",
-    "plt.imshow(v[0])\n",
+    "plt.imshow(frame)\n",
     "plt.show()"
    ]
   },
@@ -266,6 +323,7 @@
    "source": [
     "# Display the video with opencv\n",
     "# Use w/x to move forward in time (or space to run/pause the video)\n",
+    "# Use b/n to move inside the stack (For 3D videos)\n",
     "# Use v to switch on/off the display of the video\n",
     "\n",
     "byotrack.visualize.InteractiveVisualizer(video).run()"
@@ -282,6 +340,69 @@
     "# First focus on the 300 first frames, then go backward in time (5 frames at a time) and flip the vertical axis\n",
     "\n",
     "byotrack.visualize.InteractiveVisualizer(video[:300][::-5, ::-1]).run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0996b955",
+   "metadata": {},
+   "source": [
+    "## Tiff videos specificities\n",
+    "\n",
+    "We support the tiff format for videos. We try to infer axes and shapes from the metadata and what the user is trying to do, but our TiffVideoReader accepts some extra arguments to overwrite this.\n",
+    "\n",
+    "Also for large 3D videos, we implemented an on-read slicing, allowing to load only the part of the frame your interested in."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a13e4e41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# See the doc of the TiffVideoReader\n",
+    "\n",
+    "byotrack.video.reader.TiffVideoReader?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f8218eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Overwrite the axis of the tiff stack\n",
+    "# ByoTrack reads the metadata to find the name of each axis. This allows to manually overwrite this behavior.\n",
+    "# We use ImageJ convention for tiff axes: T for time, Z for stack, Y for height, X for width and C/S for channels.\n",
+    "# Most tiff are usually sorted in a TZYX order (without channels)\n",
+    "\n",
+    "# Default loading\n",
+    "video = byotrack.Video(\"path/to/video.tiff\")\n",
+    "\n",
+    "print(\"Video shape: T={}, D={}, H={}, W={}, C={}\".format(*video.shape, video.channels))\n",
+    "\n",
+    "# Let's interpret the first axis as channels no matter the metadata in the tiff.\n",
+    "video = byotrack.Video(\"path/to/video.tiff\", axes=\"CTZXY\")\n",
+    "\n",
+    "print(\"Video shape: T={}, D={}, H={}, W={}, C={}\".format(*video.shape, video.channels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e33f921f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On-read slicing the axis of the tiff stack\n",
+    "# This allows to reduce memory and time consumption for video loading when large frames are involved\n",
+    "\n",
+    "# For instance here, we downscale the Z axis by 2, and select only the second channel at read time.\n",
+    "video = byotrack.Video(\"path/to/video.tiff\", ax_slice={\"Z\": slice(None, None, 2), \"C\": slice(1, 2)})\n",
+    "\n",
+    "print(\"Video shape: T={}, D={}, H={}, W={}, C={}\".format(*video.shape, video.channels))"
    ]
   }
  ],
